# ravftp

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.rst  README.md  add_user.py  aggregator.py  app.py  cleanup_models.py  config.json  docker-compose.yml  globals.py  helpers.py  log.txt  pyproject.toml  requirements.txt  restart_server.sh  run.py  run_flask_server.py  run_ftp_server.py  setup.py  start.sh  start_federated_server.py  stop_federated_server.py  user_table.json  users.json  utils.py
RavFTP/: __init__.py  config.py
collected_model/: global.h5
ravftp/: __init__.py  add_user.py  config.py  flask_server.py  ftp_server.py  globals.py  helpers.py  logger.py
rftp/: __init__.py  config.py
