[tool.poetry]
name = "ravftp"
version = "0.1.0"
description = ""
authors = ["Kamlesh Uikey <tokamleshuikey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyftpdlib = "^1.5.6"
Flask = "^2.2.2"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

